alternc (0.9.10~rc1) stable; urgency=low

  * bugfixes:
    * fix a "already exist" error when creating a database containing an hyphen (-)
    * #1163: fix sqlbackup script call routine to retain backwards
      compatibility
    * fix usage of ISO8859-15 charset (that may NOT be defined in locales...) 
      and add it to the correct url (%%fqdn_lettre%%...)
  * major changes:
    * PHP sessions are now stored in /var/alternc/sessions
  * new features:
    * add support for .cc and .re domains.
    * when creating new accounts, "www, stats, backups" directories are
      automatically created in their accoutn.
    * when adding a new domain to an account, a directory "www/example.net"
      is automatically created and the domain points to it instead of /.
    * add new field to member form: 'notes' which is just a text field
    * send an email on new account creation. the actual email needs to be
      configured through the AlternC variables for this to work.
    * added the password policy management module : you can choose which 
      password complexity you want to force for each place a password is required.
  * API changes
    * m_mysql->get_db_list() doesn't include size anymore because this
      is a major performance hit on MySQL < 5.1.22 if there are > 1000
      databases on the system. This speeds up the AlternC login by about
      30 seconds on Koumbit.org.
  * Major patch
    * Blue desktop using only css, no frameset etc
    * Sanitizing of get/request/post parameters

 -- Benjamin Sonntag <benjamin@alternc.org>  Sat, 12 May 2009 17:55:30 +0200

alternc (0.9.9) stable; urgency=low

  * bugfixes:
    * #1080: fix webmail redirection
    * #1128, #1110: translation fixes
    * fix WHOIS lookups for .ca, .com and .net
    * fix ProFTPd TLS/SSL mode
    * #708: remove '-' from the list of authorized usernames
    * put the logout button at the end of the left menu
    * #1124: fix database user configuration